# tallerqt

./: geomagic_installer.bash  geomagic_installer.sh
Geomagic_Touch_ROS2/omni_common/: CMakeLists.txt
Geomagic_Touch_ROS2/omni_common/launch/: ddual.launch.py  dual_omni_state.launch.py  omni_state.launch.py  single_omni_state.launch.py
Ventana_simple/: botones.py  señales.py  ventana.py
geomagic_node/: geo_node.py  geo_pub.py
nodos_geomagic/: package.xml  setup.cfg  setup.py
nodos_geomagic/nodos_geomagic/: geo_node  geo_node.py  geo_pub.py
plantillas/: modulo1_basico.py  modulo2_iniciar_nodo.py  modulo3_1_publicador.py  modulo3_2_publicador.py  modulo3_3_publicador.py  modulo4_suscriptor.py
